lager-lang/examples/good/fun_overwrite.lg
int f(int x) {
    return x * 2;
}

int f(int x) {
    return x * 3;
}

int main() {
    print(f(5)); // 15
    
    return 0;
}
