lager-lang/examples/bad/wrong_return.lg
int f() {
    return "abc"; // compile error
}

int main() {
    print(f());
    
    return 0;
}